add more readme

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,8 +1,10 @@
 
+hydra:
+  run:
+    dir: experiment
 defaults:
   - model: default
   - data: default
   - training: default
   - override hydra/job_logging: colorlog
   - override hydra/hydra_logging: colorlog
-default_root_dir: 'experiments'
